# zero2prod

./: Cargo.toml  LICENSE  README.md  configuration.toml
.github/workflows/: ci.yml
migrations/: 20230430231234_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscription.rs  subscriptions.rs
tests/: health_check.rs  subscriptions.rs
tools/db/: Dockerfile
