[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.16"
serde = { version = "1.0.160", features = ["std", "serde_derive", "derive"] }
sqlx = { version = "0.6.3", features = ["all", "runtime-tokio-rustls"] }
tokio = { version = "1.27.0", features = ["full"] }

[dev-dependencies]
reqwest = "0.11.16"
